--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,5 @@
-version: "3.9"
 services:
-  node1:
+  node:
     build: .
-    command: ["--id=node1", "--addr=:6881"]
-  node2:
-    build: .
-    command: ["--id=node2", "--addr=:6882", "--peer=node1:6881"]
+    deploy:
+      replicas: 1  # default; override with --scale
